add meta handler
